@@ -36,13 +36,14 @@ setClass("textmodel_fitted",
 #'   or the logit scale proposed by Beauchamps (2001).  See 
 #'   \link{textmodel_wordscores}.}
 #'   
-#'   \item{\code{ca}}{Correspondence analysis scaling of the dfm.}
-#'   
 #'   \item{\code{NB}}{Fits a Naive Bayes model to the dfm, with options for 
 #'   smoothing, setting class priors, and a choice of multinomial or binomial 
-#'   probabilities.}
+#'   probabilities.  See \link{textmodel_NB}.}
 #'   
-#'   \item{\code{wordfish}}{Fits the "wordfish" model of Slapin and Proksch (2008).}
+#'   \item{\code{wordfish}}{Fits the "wordfish" model of Slapin and Proksch (2008).  
+#'   See \link{textmodel_wordfish}.}
+#'   
+#'   \item{\code{ca}}{Correspondence analysis scaling of the dfm.}
 #'   
 #'   \item{\code{lda}}{Fit a topic model based on latent Dirichlet allocation.  
 #'   Not yet implemented -- use \code{\link{convert}}
@@ -82,13 +83,13 @@ setClass("textmodel_fitted",
 #' wf}
 #' @export
 setGeneric("textmodel", 
-    function(x, y=NULL, data=NULL, model=c("wordscores", "NB", "wordfish", "lda", "ca"), ...)
+    function(x, y=NULL, data=NULL, model=c("wordscores", "NB", "wordfish", "ca"), ...)
              standardGeneric("textmodel"))
 
 #' @rdname textmodel
 setMethod("textmodel", signature(x = "dfm", y="ANY", data="missing", model = "character"),
           definition = 
-              function(x, y=NULL, model=c("wordscores", "NB", "wordfish", "lda", "ca"), ...) {
+              function(x, y=NULL, model=c("wordscores", "NB", "wordfish", "ca"), ...) {
                   #cat("x is:"); print(x)
                   #cat("y is:"); print(y)
                   #cat("model is:", model, "\n")
